--- a/index.html
+++ b/index.html
@@ -11,4 +11,4 @@
         <div class="passo ativo" id="passo-0">
             <img src="img/cenaria-passo0.png" alt="">
             <p>Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre uma cidade
-                perdida, escondida
+                perdida, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para encontrar essa cidade e  eu decidi segui-las!</p>
